feat/lphub: mel support (#311)
